syntax = "proto3";

option csharp_namespace = "Artemis.Service.Protos.Identity";
import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
import "common.proto";
//import "identity/shared.proto";

package artemis.service.protos.identity;

// 资源服务协议
service Resource {
  // 查询凭据信息
  rpc SearchClaimInfo(SearchClaimInfoRequest) returns (SearchClaimInfoResponse) {
    option (google.api.http) = {
      get: "/api/Claims"
    };
  }
  // 读取凭据信息
  rpc ReadClaimInfo(ReadClaimInfoRequest) returns (ReadClaimInfoResponse) {
    option (google.api.http) = {
      get: "/api/Claims/{ClaimId}"
    };
  }
  // 创建凭据
  rpc CreateClaim(CreateClaimRequest) returns (AffectedResponse) {
    option (google.api.http) = {
      post: "/api/Claims"
      body: "*"
    };
  }
}

// 查询凭据信息请求
message SearchClaimInfoRequest {
  /* 类型
   * @length(1,128)
   */
  google.protobuf.StringValue ClaimType = 1;
  /* 值
   * @length(1,512)
   */
  google.protobuf.StringValue ClaimValue = 2;
  /* 页码
  * @min(0)
  */
  google.protobuf.Int32Value Page = 3;
  /* 条目数
   * @min(0)
   */
  google.protobuf.Int32Value Size = 4;
}

// 凭据信息数据包
message ClaimInfoPacket {
  /* 凭据标识
   * @required
   * @guid
   */
  string Id = 1;
  /* 凭据类型
   * @required
   * @maxLength(128)
   */
  string ClaimType = 2;
  /* 凭据值
   * @required
   * @maxLength(512)
   */
  string ClaimValue = 3;
  /* 校验戳
   * @required
   * @md5
   */
  string CheckStamp = 4;
  /* 描述
   * @maxLength(128)
   */
  google.protobuf.StringValue Description = 5;
}

// 分页查询凭据信息数据包
message PagedClaimInfoPacket {
  /* 页码
  * @min(0)
  */
  int32 Page = 1;
  /* 条目数
   * @min(0)
   */
  int32 Size = 2;
  /* 数据总数
   * @min(0)
   */
  int64 Total = 3;
  /* 条件过滤后的数据量
   * @min(0)
   */
  int64 Count = 4;
  /* 凭据信息列表
   * @required
   */
  repeated ClaimInfoPacket Items = 5;
}

// 查询凭据信息响应
message SearchClaimInfoResponse {
  /* 状态码
   */
  int32 Code = 1;
  /* 是否成功
   */
  bool Succeeded = 2;
  /* 响应消息
   */
  string Message = 3;
  /* 错误
   * @exception
   */
  google.protobuf.StringValue Error = 4;
  /* 响应时间
   * @datetime
   */
  string DateTime = 5;
  /* 响应时间戳
   * @timestamp
   */
  int64 Timestamp = 6;
  /* 分页凭据信息数据包
   * @required
   */
  PagedClaimInfoPacket Data = 7;
}

// 读取凭据信息请求
message ReadClaimInfoRequest {
  /* 凭据标识
   * @required
   * @guid
   */
  string ClaimId = 1;
}

// 读取凭据信息响应
message ReadClaimInfoResponse {
  /* 状态码
   */
  int32 Code = 1;
  /* 是否成功
   */
  bool Succeeded = 2;
  /* 响应消息
   */
  string Message = 3;
  /* 错误
   * @exception
   */
  google.protobuf.StringValue Error = 4;
  /* 响应时间
   * @datetime
   */
  string DateTime = 5;
  /* 响应时间戳
   * @timestamp
   */
  int64 Timestamp = 6;
  /* 凭据信息数据包
   * @required
   */
  ClaimInfoPacket Data = 7;
}

// 创建凭据请求
message CreateClaimRequest {
  /* 凭据类型
   * @required
   * @maxLength(128)
   */
  string ClaimType = 1;
  /* 凭据值
   * @required
   * @maxLength(512)
   */
  string ClaimValue = 2;
  /* 描述
   * @maxLength(128)
   */
  google.protobuf.StringValue Description = 3;
}